--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-sr/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-sr/strings.xml
@@ -11,4 +11,5 @@
     <string name="ib_chat_cant_create_attachment">Ne može se kreirati prilog iz odabranog fajla</string>
     <string name="ib_chat_ok">U redu</string>
     <string name="ib_chat_error">Nešto je krenulo pogrešno:  %1$s.</string>
+    <string name="ib_chat_error_code">Код грешке: %1$с.</string>
 </resources>
