--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-vi/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-vi/strings.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="ib_chat_message_hint">Gửi tin nhắn…</string>
     <string name="ib_chat_no_connection">Không có kết nối</string>
+    <string name="ib_iv_btn_send_desc">Gửi tin nhắn trò chuyện</string>
+    <string name="ib_iv_btn_send_attachment_desc">Gửi tệp đính kèm</string>
+    <string name="ib_iv_input_border_desc">Đường viền trên cùng</string>
     <string name="ib_chat_allowed_attachment_size_exceeded">Vượt quá kích thước tệp đính kèm tối đa</string>
     <string name="ib_chat_permissions_not_granted_title">Quyền không được cấp</string>
     <string name="ib_chat_permissions_not_granted_message">Bạn có thể cấp chúng trong cài đặt ứng dụng.</string>
     <string name="ib_chat_cant_create_attachment">Không thể tạo tệp đính kèm từ tệp đã chọn</string>
+    <string name="ib_chat_ok">ĐƯỢC RỒI</string>
+    <string name="ib_chat_error">Đã xảy ra lỗi: %1$s.</string>
+    <string name="ib_chat_error_code">Mã lỗi: %1$s.</string>
 </resources>
