--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-bs/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-bs/strings.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="ib_chat_message_hint">Pošalji poruku...</string>
+    <string name="ib_chat_no_connection">Nema konekcije</string>
+    <string name="ib_iv_btn_send_desc">Pošalji poruku za ćaskanje</string>
+    <string name="ib_iv_btn_send_attachment_desc">Pošaljite prilog</string>
+    <string name="ib_iv_input_border_desc">Gornja granica</string>
+    <string name="ib_chat_allowed_attachment_size_exceeded">Prekoračena je maksimalna dozvoljena veličina priloga</string>
+    <string name="ib_chat_permissions_not_granted_title">Dozvole nisu odobrene</string>
+    <string name="ib_chat_permissions_not_granted_message">Možete ih odobriti u postavkama aplikacije.</string>
     <string name="ib_chat_cant_create_attachment">Nije moguće kreirati prilog iz odabrane datoteke</string>
+    <string name="ib_chat_ok">Uredu</string>
+    <string name="ib_chat_error">Nešto nije u redu: %1$s.</string>
+    <string name="ib_chat_error_code">Kôd greške: %1$s.</string>
 </resources>
