--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-de/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-de/strings.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="ib_chat_no_connection">Keine Verbindung</string>
+    <string name="ib_iv_btn_send_desc">Chat-Nachricht senden</string>
+    <string name="ib_iv_btn_send_attachment_desc">Anhang senden</string>
+    <string name="ib_iv_input_border_desc">Oberer Rand</string>
     <string name="ib_chat_allowed_attachment_size_exceeded">Maximal zulässige Anhangsgröße überschritten</string>
     <string name="ib_chat_permissions_not_granted_title">Berechtigungen nicht erteilt</string>
     <string name="ib_chat_permissions_not_granted_message">Sie können sie in den Anwendungseinstellungen gewähren.</string>
     <string name="ib_chat_message_hint">Nachricht senden...</string>
     <string name="ib_chat_cant_create_attachment">Aus der ausgewählten Datei kann kein Anhang erstellt werden</string>
+    <string name="ib_chat_ok">OK</string>
+    <string name="ib_chat_error">Es ist ein Fehler aufgetreten: %1$s.</string>
+    <string name="ib_chat_error_code">Fehlercode: %1$s.</string>
 </resources>
