--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-fi/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-fi/strings.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="ib_chat_message_hint">Lähetä viesti…</string>
     <string name="ib_chat_no_connection">Ei yhteyttä</string>
+    <string name="ib_iv_btn_send_desc">Lähetä chat-viesti</string>
+    <string name="ib_iv_btn_send_attachment_desc">Lähetä liite</string>
+    <string name="ib_iv_input_border_desc">Yläreuna</string>
     <string name="ib_chat_allowed_attachment_size_exceeded">Liitteen suurin sallittu koko ylitetty</string>
     <string name="ib_chat_permissions_not_granted_title">Lupaa ei myönnetä</string>
     <string name="ib_chat_permissions_not_granted_message">Voit myöntää heille sovellusasetuksissa.</string>
     <string name="ib_chat_cant_create_attachment">Valitusta tiedostosta ei voi luoda liitettä</string>
+    <string name="ib_chat_ok">OK</string>
+    <string name="ib_chat_error">Jotain meni pieleen: %1$s.</string>
+    <string name="ib_chat_error_code">Virhekoodi: %1$s.</string>
 </resources>
