--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-hr/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-hr/strings.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="ib_chat_no_connection">Nema veze</string>
+    <string name="ib_iv_btn_send_desc">Pošalji chat poruku</string>
+    <string name="ib_iv_btn_send_attachment_desc">Pošalji prilog</string>
+    <string name="ib_iv_input_border_desc">Gornja granica</string>
     <string name="ib_chat_allowed_attachment_size_exceeded">Premašena je najveća dopuštena veličina privitka</string>
     <string name="ib_chat_permissions_not_granted_title">Dozvole nisu odobrene</string>
     <string name="ib_chat_permissions_not_granted_message">Možete ih odobriti u postavkama programa.</string>
     <string name="ib_chat_message_hint">Pošalji poruku...</string>
     <string name="ib_chat_cant_create_attachment">Nije moguće stvoriti privitak iz odabrane datoteke</string>
+    <string name="ib_chat_ok">U redu</string>
+    <string name="ib_chat_error">Nešto nije u redu: %1$s.</string>
+    <string name="ib_chat_error_code">Kôd pogreške: %1$s.</string>
 </resources>
