--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-in/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-in/strings.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="ib_chat_message_hint">Kirim pesan…</string>
     <string name="ib_chat_no_connection">Tidak ada koneksi</string>
+    <string name="ib_iv_btn_send_desc">Kirim pesan obrolan</string>
+    <string name="ib_iv_btn_send_attachment_desc">Kirim lampiran</string>
+    <string name="ib_iv_input_border_desc">Perbatasan atas</string>
     <string name="ib_chat_allowed_attachment_size_exceeded">Ukuran lampiran maksimum yang diizinkan terlampaui</string>
     <string name="ib_chat_permissions_not_granted_title">Izin tidak diberikan</string>
     <string name="ib_chat_permissions_not_granted_message">Anda dapat memberi mereka dalam pengaturan aplikasi.</string>
     <string name="ib_chat_cant_create_attachment">Tidak dapat membuat lampiran dari file yang dipilih</string>
+    <string name="ib_chat_ok">OKE</string>
+    <string name="ib_chat_error">Ada yang tidak beres: %1$s.</string>
+    <string name="ib_chat_error_code">Kode kesalahan: %1$s.</string>
 </resources>
