--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-iw/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-iw/strings.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="ib_chat_message_hint">שלח הודעה…</string>
     <string name="ib_chat_no_connection">אין חיבור</string>
+    <string name="ib_iv_btn_send_desc">שלח הודעת צ\'אט</string>
+    <string name="ib_iv_btn_send_attachment_desc">שלח קובץ מצורף</string>
+    <string name="ib_iv_input_border_desc">גבול עליון</string>
     <string name="ib_chat_allowed_attachment_size_exceeded">חרג מהגודל המצורף המרבי המותר</string>
     <string name="ib_chat_permissions_not_granted_title">לא ניתנו הרשאות</string>
     <string name="ib_chat_permissions_not_granted_message">אתה יכול להעניק להם הגדרות יישום.</string>
     <string name="ib_chat_cant_create_attachment">לא ניתן ליצור קובץ מצורף מהקובץ שנבחר</string>
+    <string name="ib_chat_ok">בסדר</string>
+    <string name="ib_chat_error">משהו השתבש: %1$s.</string>
+    <string name="ib_chat_error_code">קוד שגיאה: %1$s.</string>
 </resources>
