--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ko/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ko/strings.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="ib_chat_no_connection">연결이 없습니다</string>
+    <string name="ib_iv_btn_send_desc">채팅 메시지 보내기</string>
+    <string name="ib_iv_btn_send_attachment_desc">첨부파일 보내기</string>
+    <string name="ib_iv_input_border_desc">상단 테두리</string>
     <string name="ib_chat_allowed_attachment_size_exceeded">허용되는 최대 첨부 파일 크기를 초과했습니다</string>
     <string name="ib_chat_permissions_not_granted_title">허가되지 않은 권한</string>
     <string name="ib_chat_permissions_not_granted_message">응용 프로그램 설정에서 부여 할 수 있습니다.</string>
     <string name="ib_chat_message_hint">메시지를 보내십시오...</string>
     <string name="ib_chat_cant_create_attachment">선택한 파일에서 첨부 파일을 만들 수 없습니다.</string>
+    <string name="ib_chat_ok">좋아요</string>
+    <string name="ib_chat_error">문제가 발생했습니다: %1$s.</string>
+    <string name="ib_chat_error_code">오류 코드: %1$s.</string>
 </resources>
