--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-la/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-la/strings.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="ib_chat_message_hint">Epistulam mitte…</string>
     <string name="ib_chat_no_connection">No connection</string>
+    <string name="ib_iv_btn_send_desc">Mitte chat nuntium</string>
+    <string name="ib_iv_btn_send_attachment_desc">Mitte affectum</string>
+    <string name="ib_iv_input_border_desc">Top terminus</string>
     <string name="ib_chat_allowed_attachment_size_exceeded">Maximum amplitudo concessa affectum exceditur</string>
     <string name="ib_chat_permissions_not_granted_message">Vos can det illis per applicationem occasus.</string>
     <string name="ib_chat_permissions_not_granted_title">Quae non permissiones</string>
     <string name="ib_chat_cant_create_attachment">Non potest creare affectum ex lectus file</string>
+    <string name="ib_chat_ok">OK</string>
+    <string name="ib_chat_error">Aliquid erravit: %1$s.</string>
+    <string name="ib_chat_error_code">Error code: %1$s.</string>
 </resources>
