--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ms/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ms/strings.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="ib_chat_message_hint">Hantar satu mesej…</string>
     <string name="ib_chat_no_connection">Tiada sambungan</string>
-    <string name="ib_chat_allowed_attachment_size_exceeded">Melebihi ukuran lampiran yang dibenarkan</string>
+    <string name="ib_iv_btn_send_desc">Hantar mesej sembang</string>
+    <string name="ib_iv_btn_send_attachment_desc">Hantar lampiran</string>
+    <string name="ib_iv_input_border_desc">Sempadan atas</string>
+    <string name="ib_chat_allowed_attachment_size_exceeded">Saiz lampiran maksimum yang dibenarkan melebihi</string>
     <string name="ib_chat_permissions_not_granted_title">Kebenaran tidak diberikan</string>
     <string name="ib_chat_permissions_not_granted_message">Anda boleh memberikannya dalam tetapan aplikasi.</string>
     <string name="ib_chat_cant_create_attachment">Tidak boleh membuat lampiran daripada fail yang dipilih</string>
+    <string name="ib_chat_ok">Okey</string>
+    <string name="ib_chat_error">Sesuatu telah berlaku: %1$s.</string>
+    <string name="ib_chat_error_code">Kod ralat: %1$s.</string>
 </resources>
