--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-pl/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-pl/strings.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="ib_chat_no_connection">Brak połączenia</string>
+    <string name="ib_iv_btn_send_desc">Wyślij wiadomość na czacie</string>
+    <string name="ib_iv_btn_send_attachment_desc">Wyślij załącznik</string>
+    <string name="ib_iv_input_border_desc">Górna granica</string>
     <string name="ib_chat_allowed_attachment_size_exceeded">Przekroczono maksymalny dozwolony rozmiar załącznika</string>
     <string name="ib_chat_permissions_not_granted_message">Możesz je przyznać w ustawieniach aplikacji.</string>
     <string name="ib_chat_permissions_not_granted_title">Nie przyznano uprawnień</string>
     <string name="ib_chat_message_hint">Wyślij wiadomość...</string>
     <string name="ib_chat_cant_create_attachment">Nie można utworzyć załącznika z wybranego pliku</string>
+    <string name="ib_chat_ok">OK</string>
+    <string name="ib_chat_error">Coś poszło nie tak: %1$s.</string>
+    <string name="ib_chat_error_code">Kod błędu: %1$s.</string>
 </resources>
