--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-sk/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-sk/strings.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="ib_chat_no_connection">Žiadne spojenie</string>
+    <string name="ib_iv_btn_send_desc">Odoslať chatovú správu</string>
+    <string name="ib_iv_btn_send_attachment_desc">Odoslať prílohu</string>
+    <string name="ib_iv_input_border_desc">Horný okraj</string>
     <string name="ib_chat_allowed_attachment_size_exceeded">Bola prekročená maximálna povolená veľkosť prílohy</string>
     <string name="ib_chat_permissions_not_granted_title">Povolenia neboli udelené</string>
     <string name="ib_chat_permissions_not_granted_message">Môžete ich udeliť v nastaveniach aplikácie.</string>
     <string name="ib_chat_message_hint">Poslať správu...</string>
     <string name="ib_chat_cant_create_attachment">Nie je možné vytvoriť prílohu z vybraného súboru</string>
+    <string name="ib_chat_ok">OK</string>
+    <string name="ib_chat_error">Niečo sa pokazilo: %1$s.</string>
+    <string name="ib_chat_error_code">Kód chyby: %1$s.</string>
 </resources>
