--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-sl/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-sl/strings.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="ib_chat_message_hint">Pošlji sporočilo…</string>
+    <string name="ib_chat_no_connection">Ni povezave</string>
+    <string name="ib_iv_btn_send_desc">Pošlji sporočilo klepeta</string>
+    <string name="ib_iv_btn_send_attachment_desc">Pošlji prilogo</string>
+    <string name="ib_iv_input_border_desc">Zgornja meja</string>
+    <string name="ib_chat_allowed_attachment_size_exceeded">Največja dovoljena velikost priloge je presežena</string>
+    <string name="ib_chat_permissions_not_granted_title">Dovoljenja niso podeljena</string>
+    <string name="ib_chat_permissions_not_granted_message">Dodelite jih lahko v nastavitvah aplikacije.</string>
     <string name="ib_chat_cant_create_attachment">Iz izbrane datoteke ni mogoče ustvariti priloge</string>
+    <string name="ib_chat_ok">V redu</string>
+    <string name="ib_chat_error">Nekaj ​​je šlo narobe: %1$s.</string>
+    <string name="ib_chat_error_code">Koda napake: %1$s.</string>
 </resources>
