--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-th/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-th/strings.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="ib_chat_no_connection">ไม่มีการเชื่อมต่อ</string>
+    <string name="ib_iv_btn_send_desc">ส่งข้อความแชท</string>
+    <string name="ib_iv_btn_send_attachment_desc">ส่งเอกสารแนบ</string>
+    <string name="ib_iv_input_border_desc">ขอบบน</string>
     <string name="ib_chat_allowed_attachment_size_exceeded">เกินขนาดสูงสุดที่อนุญาตแล้ว</string>
     <string name="ib_chat_permissions_not_granted_title">ไม่ได้รับอนุญาต</string>
     <string name="ib_chat_permissions_not_granted_message">คุณสามารถให้สิทธิ์ในการตั้งค่าแอปพลิเคชัน</string>
     <string name="ib_chat_message_hint">ส่งข้อความ</string>
     <string name="ib_chat_cant_create_attachment">สร้างไฟล์แนบจากไฟล์ที่เลือกไม่ได้</string>
+    <string name="ib_chat_ok">ตกลง</string>
+    <string name="ib_chat_error">มีข้อผิดพลาดเกิดขึ้น: %1$s.</string>
+    <string name="ib_chat_error_code">รหัสข้อผิดพลาด: %1$s.</string>
 </resources>
