--- a/infobip-mobile-messaging-android-demo/src/chatCommon/res/values/strings.xml
+++ b/infobip-mobile-messaging-android-demo/src/chatCommon/res/values/strings.xml
@@ -27,6 +27,8 @@
     <string name="thai">Thai</string>
     <string name="turkish">Türkçe</string>
     <string name="ukrainian">украї́нська</string>
+    <string name="chinese_traditional">繁體中文</string>
+    <string name="chinese_simplified">简体中文</string>
 
     <string name="push_registration_id">Push registration ID</string>
     <string name="customer_name">Customer name</string>
