Pull request #422: MCA-3626 InAppChat attachment preview download button is native one and fully customizable.
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-3626_attach_save_customizable to master

Squashed commit of the following:

commit e4505eb488b96a93a4aff81be6226804865f7906
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Thu Feb 8 17:03:22 2024 +0100

    MCA-3626 Correct parsing of attachment name using contentDisposition

commit 67da9e1d68bad3b09fb53c05064ccff01951b696
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Thu Feb 8 09:59:06 2024 +0100

    MCA-3626 Cleanup

commit 85c811bac0c9f80aa8f5f92995c643060c332084
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Thu Feb 8 09:55:46 2024 +0100

    MCA-3626 InAppChat attachment preview download button is native one and fully customizable. We request only permissions we really need.

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ar/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ar/strings.xml
@@ -12,4 +12,5 @@
     <string name="ib_chat_ok">نعم</string>
     <string name="ib_chat_error">حدث خطأ ما: %1$s.</string>
     <string name="ib_chat_error_code">رمز الخطأ: %1$s.</string>
+    <string name="ib_chat_save">يحفظ</string>
 </resources>
