--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-b+zh+Hans/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-b+zh+Hans/strings.xml
@@ -12,4 +12,5 @@
     <string name="ib_chat_ok">好的</string>
     <string name="ib_chat_error">出现错误：%1$s.</string>
     <string name="ib_chat_error_code">错误代码：%1$s.</string>
+    <string name="ib_chat_save">节省</string>
 </resources>
