--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-de/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-de/strings.xml
@@ -12,4 +12,5 @@
     <string name="ib_chat_ok">OK</string>
     <string name="ib_chat_error">Es ist ein Fehler aufgetreten: %1$s.</string>
     <string name="ib_chat_error_code">Fehlercode: %1$s.</string>
+    <string name="ib_chat_save">Speichern</string>
 </resources>
