--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-es-rES/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-es-rES/strings.xml
@@ -12,4 +12,5 @@
     <string name="ib_chat_ok">DE ACUERDO</string>
     <string name="ib_chat_error">Algo salió mal: %1$s.</string>
     <string name="ib_chat_error_code">Código de error: %1$s.</string>
+    <string name="ib_chat_save">Ahorrar</string>
 </resources>
