--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-fi/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-fi/strings.xml
@@ -12,4 +12,5 @@
     <string name="ib_chat_ok">OK</string>
     <string name="ib_chat_error">Jotain meni pieleen: %1$s.</string>
     <string name="ib_chat_error_code">Virhekoodi: %1$s.</string>
+    <string name="ib_chat_save">Tallentaa</string>
 </resources>
