--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-fr/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-fr/strings.xml
@@ -12,4 +12,5 @@
     <string name="ib_chat_ok">D\'ACCORD</string>
     <string name="ib_chat_error">Quelque chose s\'est mal passé : %1$s.</string>
     <string name="ib_chat_error_code">Code d\'erreur : %1$s.</string>
+    <string name="ib_chat_save">Sauvegarder</string>
 </resources>
