--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-hi/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-hi/strings.xml
@@ -12,4 +12,5 @@
     <string name="ib_chat_ok">ठीक है</string>
     <string name="ib_chat_error">कुछ ग़लत हुआ: %1$s.</string>
     <string name="ib_chat_error_code">त्रुटि कोड: %1$s.</string>
+    <string name="ib_chat_save">बचाना</string>
 </resources>
