--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-hr/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-hr/strings.xml
@@ -12,4 +12,5 @@
     <string name="ib_chat_ok">U redu</string>
     <string name="ib_chat_error">Nešto nije u redu: %1$s.</string>
     <string name="ib_chat_error_code">Kôd pogreške: %1$s.</string>
+    <string name="ib_chat_save">Uštedjeti</string>
 </resources>
