--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-hu/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-hu/strings.xml
@@ -12,4 +12,5 @@
     <string name="ib_chat_ok">Rendben</string>
     <string name="ib_chat_error">Hiba történt: %1$s.</string>
     <string name="ib_chat_error_code">Hibakód: %1$s.</string>
+    <string name="ib_chat_save">Megment</string>
 </resources>
