--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-in/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-in/strings.xml
@@ -12,4 +12,5 @@
     <string name="ib_chat_ok">OKE</string>
     <string name="ib_chat_error">Ada yang tidak beres: %1$s.</string>
     <string name="ib_chat_error_code">Kode kesalahan: %1$s.</string>
+    <string name="ib_chat_save">Menyimpan</string>
 </resources>
