--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-it/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-it/strings.xml
@@ -12,4 +12,5 @@
     <string name="ib_chat_ok">OK</string>
     <string name="ib_chat_error">Ada yang tidak bere: %1$s.</string>
     <string name="ib_chat_error_code">Codice errore: %1$s.</string>
+    <string name="ib_chat_save">Salva</string>
 </resources>
