--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-iw/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-iw/strings.xml
@@ -12,4 +12,5 @@
     <string name="ib_chat_ok">בסדר</string>
     <string name="ib_chat_error">משהו השתבש: %1$s.</string>
     <string name="ib_chat_error_code">קוד שגיאה: %1$s.</string>
+    <string name="ib_chat_save">להציל</string>
 </resources>
