--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-la/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-la/strings.xml
@@ -12,4 +12,5 @@
     <string name="ib_chat_ok">OK</string>
     <string name="ib_chat_error">Aliquid erravit: %1$s.</string>
     <string name="ib_chat_error_code">Error code: %1$s.</string>
+    <string name="ib_chat_save">salvare</string>
 </resources>
