--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-lt/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-lt/strings.xml
@@ -12,4 +12,5 @@
     <string name="ib_chat_ok">Gerai</string>
     <string name="ib_chat_error">Kažkas ne taip: %1$s.</string>
     <string name="ib_chat_error_code">Klaidos kodas: %1$s.</string>
+    <string name="ib_chat_save">Sutaupyti</string>
 </resources>
