--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ms/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ms/strings.xml
@@ -12,4 +12,5 @@
     <string name="ib_chat_ok">Okey</string>
     <string name="ib_chat_error">Sesuatu telah berlaku: %1$s.</string>
     <string name="ib_chat_error_code">Kod ralat: %1$s.</string>
+    <string name="ib_chat_save">Jimat</string>
 </resources>
