--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-nl/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-nl/strings.xml
@@ -12,4 +12,5 @@
     <string name="ib_chat_ok">OK</string>
     <string name="ib_chat_error">Er is iets misgegaan: %1$s.</string>
     <string name="ib_chat_error_code">Foutcode: %1$s.</string>
+    <string name="ib_chat_save">Redden</string>
 </resources>
