--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-no/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-no/strings.xml
@@ -12,4 +12,5 @@
     <string name="ib_chat_ok">OK</string>
     <string name="ib_chat_error">Noe gikk galt: %1$s.</string>
     <string name="ib_chat_error_code">Feilkode: %1$s.</string>
+    <string name="ib_chat_save">Lagre</string>
 </resources>
