--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-pl/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-pl/strings.xml
@@ -12,4 +12,5 @@
     <string name="ib_chat_ok">OK</string>
     <string name="ib_chat_error">Coś poszło nie tak: %1$s.</string>
     <string name="ib_chat_error_code">Kod błędu: %1$s.</string>
+    <string name="ib_chat_save">Ratować</string>
 </resources>
