--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-pt/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-pt/strings.xml
@@ -12,4 +12,5 @@
     <string name="ib_chat_ok">OK</string>
     <string name="ib_chat_error">Algo deu errado: %1$s.</string>
     <string name="ib_chat_error_code">Código de erro: %1$s.</string>
+    <string name="ib_chat_save">Salvar</string>
 </resources>
