--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ro/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ro/strings.xml
@@ -12,4 +12,5 @@
     <string name="ib_chat_ok">Bine</string>
     <string name="ib_chat_error">A apărut o eroare: %1$s.</string>
     <string name="ib_chat_error_code">Cod de eroare: %1$s.</string>
+    <string name="ib_chat_save">Salvați</string>
 </resources>
