--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-sq/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-sq/strings.xml
@@ -12,4 +12,5 @@
     <string name="ib_iv_btn_send_desc">Dërgo mesazh chat</string>
     <string name="ib_iv_input_border_desc">Kufiri i sipërm</string>
     <string name="ib_chat_error_code">Kodi i gabimit: %1$s.</string>
+    <string name="ib_chat_save">Ruaj</string>
 </resources>
