--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-sv/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-sv/strings.xml
@@ -12,4 +12,5 @@
     <string name="ib_chat_ok">OK</string>
     <string name="ib_chat_error">Något gick fel: %1$s.</string>
     <string name="ib_chat_error_code">Felkod: %1$s.</string>
+    <string name="ib_chat_save">Spara</string>
 </resources>
