--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-th/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-th/strings.xml
@@ -12,4 +12,5 @@
     <string name="ib_chat_ok">ตกลง</string>
     <string name="ib_chat_error">มีข้อผิดพลาดเกิดขึ้น: %1$s.</string>
     <string name="ib_chat_error_code">รหัสข้อผิดพลาด: %1$s.</string>
+    <string name="ib_chat_save">บันทึก</string>
 </resources>
