--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-uk-rUA/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-uk-rUA/strings.xml
@@ -12,4 +12,5 @@
     <string name="ib_chat_ok">в порядку</string>
     <string name="ib_chat_error">Щось пішло не так: %1$s.</string>
     <string name="ib_chat_error_code">Код помилки: %1$s.</string>
+    <string name="ib_chat_save">зберегти</string>
 </resources>
