--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-vi/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-vi/strings.xml
@@ -12,4 +12,5 @@
     <string name="ib_chat_ok">ĐƯỢC RỒI</string>
     <string name="ib_chat_error">Đã xảy ra lỗi: %1$s.</string>
     <string name="ib_chat_error_code">Mã lỗi: %1$s.</string>
+    <string name="ib_chat_save">Cứu</string>
 </resources>
