--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-zh-rTW/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-zh-rTW/strings.xml
@@ -12,4 +12,5 @@
     <string name="ib_chat_ok">好的</string>
     <string name="ib_chat_error">出了點問題：%1$s.</string>
     <string name="ib_chat_error_code">錯誤代碼：%1$s.</string>
+    <string name="ib_chat_save">節省</string>
 </resources>
