Pull request #439: Jdzubak MCA-4025 configurable InAppChatFragment
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-4025-configurable-InAppChatFragment to master

Squashed commit of the following:

commit 964a86b2c74505e1f91ef892db427a4c3812cbe2
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Jul 16 15:24:32 2024 +0200

    MCA-4063 Review fixes

commit 56a8c808d39f1a9ad76061d409d834f90007fc2b
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Jul 16 15:05:31 2024 +0200

    MCA-4063 Review fixes

commit c1c16a487af6bc1c04a798ba66b0db1e9e039a00
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Jul 16 14:39:26 2024 +0200

    MCA-4063 Review fixes

commit 2ceef1877699d4d8545119d01cf7dd0ad73098d7
Author: Ivan Krešić <Ivan.Kresic@infobip.com>
Date:   Tue Jul 16 12:38:48 2024 +0000

    Applied suggestion

commit 85c30303fd4053b61b3231a0b971b6832c953f98
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Jul 15 13:51:10 2024 +0200

    MCA-4063 Update

commit 8029a80905673b0fdf7845d77a0f34702a3bcdbf
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Jul 12 14:46:25 2024 +0200

    MCA-4063 Update

commit e5847fd10c2f1a1757d4d58d9d99d5539c5dcf2e
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Jul 12 14:01:37 2024 +0200

    MCA-4063 Update

commit 9da22195426de1264fd28ec462fb6c21dcc32921
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Jul 8 14:11:07 2024 +0200

    MCA-4063 Update with master

commit 78f6ae1880c1019a4757c505cff1c9ec9e44ae38
Merge: 33ce0139 05aef417
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Jul 8 13:53:06 2024 +0200

    Merge remote-tracking branch 'origin/master' into jdzubak-MCA-4025-configurable-InAppChatFragment

    # Conflicts:
    #	infobip-mobile-messaging-android-demo/src/chat/java/org/infobip/mobile/messaging/demo/MainActivity.java
    #	infobip-mobile-messaging-android-demo/src/chatCommon/res/layout/activity_main.xml
    #	infobip-mobile-mes

--- a/infobip-mobile-messaging-android-demo/src/chatCommon/res/values/strings.xml
+++ b/infobip-mobile-messaging-android-demo/src/chatCommon/res/values/strings.xml
@@ -41,7 +41,10 @@
     <string name="subject">Subject</string>
     <string name="authenticate">Authenticate</string>
     <string name="mm_open_chat_activity">Open chat activity</string>
-    <string name="mm_open_chat_fragment">Open chat fragment</string>
+    <string name="mm_open_chat_fragment">Open chat fragment with:</string>
+    <string name="mm_toolbar">Toolbar</string>
+    <string name="mm_input">Input</string>
+    <string name="mm_show_chat_fragment">Show chat fragment</string>
     <string name="mm_open_chat_view">Open chat view</string>
     <string name="mm_personalize">Personalize</string>
     <string name="mm_depersonalize">Depersonalize</string>
